# iris-classification

./: .gitignore  README
C++Levenshtein/: .gitignore  CMakeLists.txt  CMakeSettings.json  README
C++Levenshtein/include/: levenshtein.h  trie.h
C++Levenshtein/src/: benchmark.cpp  levenshtein.cpp  trie.cpp
C++Levenshtein/tests/: CMakeLists.txt  test_levenshtein.cpp  test_trie_levenshtein.cpp
house-price-prediction/: README
house-price-prediction/notebooks/: house_price_prediction.ipynb
house-price-prediction/src/: data_loader.py  evaluate.py  model.py
house-price-prediction/tests/: test_data_loader.py  test_evaluate.py  test_model.py
iris-classification/src/: data_loader.py
iris-classification/tests/: test_model.py
notebooks/: iris_classification.ipynb
src/: model.py
tests/: test_data_loader.py
